(library
 (name compiler)
 (libraries
  core
  cmdliner
  yojson
  json_reader
  args
  x86_asm
  util
  parser
  type
  flow)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(env
 ; For lab 1, Minus_minus is unused, so we suppress that warning here.
 ; Feel free to remove that for future labs.
 (_
  (menhir_flags --unused-token Minus_minus)))
